--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marquel08/StyleU-eCommerce.git"
+  },
+  "bugs": {
+    "url": "https://github.com/marquel08/StyleU-eCommerce/issues"
+  },
+  "homepage": "https://github.com/marquel08/StyleU-eCommerce#readme"
 }
